apps/staging/sre-challenge-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sre-challenge
  labels:
    name: sre-challenge
    environment: staging
