apps/staging/sre-challenge-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-challenge-app
  namespace: sre-challenge
  labels:
    app: sre-challenge-app
    environment: staging
spec:
  selector:
    app: sre-challenge-app
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
